--- a/style/style.css
+++ b/style/style.css
@@ -18,3 +18,7 @@ h1 {
     background-color: #333;
     color: #fff;
 }
+#Go-to{
+    
+    background: linear-gradient(to right, #A8F, #ADD8E6);
+}
